added stickler files. Modified README file and reorganized the project's structure

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
 	
         <title id="title">Jack Ma</title>
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <main id="main">
